migrate kyo-examples